# js-engine-benchmark

./: .gitignore  CLAUDE.md  pom.xml
rquickjs-bench/: Cargo.toml
rquickjs-bench/.cargo/: config.toml
rquickjs-bench/src/: lib.rs
src/main/java/jsbench/: BenchmarkMain.java  JsBench.java  QuickJs4JBackend.java  SieveApi.java
src/main/kotlin/: CraneliftPreflight.kt  GraalJsBackend.kt  GraalJsInterpreterBackend.kt  JsBackend.kt  Main.kt  RQuickJsChicoryBackend.kt  RQuickJsFFMBackend.kt
src/main/resources/js/: sieve.js
src/main/resources/wasm/: cranelift.wasm  rquickjs.wasm
